Release 1.0.1 - XX.05.2017 - IN_DEVELOPMENT
INCOMPATIBLE CHANGES
- Visualizer: cannot work on MacOS X due to how the Allegro5 library
  implementes initialization by overriding main(). Trying to enable
  the visualizer on MacOS X results in an error now.

NEW FEATURES
- Docs: new 'docs/modules.txt' document to describe modules system.
- Input/Output modules: use caerModuleLog() where possible.
- caer-bin: now supports several command-line options, -h/--help to get
  a help text, -c/--config to specify an alternative XML configuration
  file, and -o/--override to override a specific configuration parameter
  that was loaded from the XML configuration file.

BUG FIXES
- Windows: plugins can now successfully link against the symbols the
  executable provides, by generating a special DLL import library.
- MacOS X: fixed undefined references in plugins during linking.
- MacOS X: also search for modules in files with .dylib extension.
- SSHS: when importing nodes and attributes from XML files, create them
  with SSHS_FLAGS_NORMAL instead of SSHS_FLAGS_READ_ONLY, to allow
  modification by internal users.
- README: added Boost dependency to documentation.


Release 1.0.0 - 28.04.2017
- Initial 1.X branch release. Uses libcaer 2.0.2. Supports DVS128, DAVIS and
  Dynap-se devices, as well as AEDAT 3.1 input/output via files and network.
  New modules system, see 'docs/modules.txt' and 'README.porting'.